# Financial_IA-Project

./: README.md  main.py  prediction.py  pyproject.toml
financialia/: chatbot.py  pyproject.toml
financialia/app/: Dokerfile.app  api.py  requirements.txt
financialia/app/database/: connection.py  tables.py
financialia/app/model/: model.h5  model_info.json
financialia/app/services/: model_service.py
financialia/app/utils/: logger.py
financialia/chatbot/: Preguntas_Chatbot_Financiero.xlsx  chatbot.py
financialia/interfaz/: Dokerfile.interfaz  requirements.txt
financialia/interfaz/static/: style.css
financialia/interfaz/templates/: index.html
financialia/webfinancialia/: .env
financialia/webfinancialia/src/: settings.py
financialia/webfinancialia/templates/core/: base.html
financialiaP/: conect.py  pyproject.toml  requirements.txt
financialiaP/app/api/: manage.py
financialiaP/app/database/: database.py
financialiaP/model/: arquitectura.py  scaler.pkl
model/: arquitectura.py
model/modelo/: ^GSPC_model_info.json
