[project]
name = "proyectotech"
version = "0.1.0"
description = ""
authors = [
    {name = "JuanMarin58",email = "juancarlosmarin.8858@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, < 3.11"
dependencies = [
    "numpy (==1.26)",
    "tensorflow-io-gcs-filesystem (==0.31)",
    "yfinance (>=0.2.58,<0.3.0)",
    "tensorflow (==2.19)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "django (==4.2)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg-binary (>=3.2.7,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
