[project]
name = "financialia"
version = "0.1.0"
description = ""
authors = [
    {name = "JuanMarin58",email = "juancarlosmarin.8858@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.59,<0.3.0)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "nltk (>=3.9.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
